test/conformance/chainsaw/validate/e2e/lowercase-kind-crd-deprecated/chainsaw-step-01-apply-1-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - acid.zalan.do/v1/postgresql
    name: test-rule
    validate:
      message: The label app=foo is required
      pattern:
        metadata:
          labels:
            app: foo
  validationFailureAction: Enforce
