test/conformance/chainsaw/validate/e2e/lowercase-kind-crd-deprecated/postgresqls-ready.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: postgresqls.acid.zalan.do
  labels:
    app.kubernetes.io/name: postgres-operator
status:
  acceptedNames:
    categories:
      - all
    kind: postgresql
    listKind: postgresqlList
    plural: postgresqls
    shortNames:
      - pg
    singular: postgresql
  conditions:
    - message: no conflicts found
      reason: NoConflicts
      status: "True"
      type: NamesAccepted
    - message: the initial names have been accepted
      reason: InitialNamesAccepted
      status: "True"
      type: Established
  storedVersions:
    - v1
