test/conformance/chainsaw/validate/e2e/lowercase-kind-crd-deprecated/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lowercase-kind-crd
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: postgresqls.yaml
    - assert:
        file: postgresqls-ready.yaml
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test
  - try:
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource.yaml
